Do not mark directly composited image layers as opaque

Due to https://crbug.com/870857, we cannot mark directly composited
image layers as opaque. https://crrev.com/556288 started setting
prevent_contents_opaque_changes_ for directly-composited image layers
which exposed this bug.

Bug: 868779
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I9fb0fe4361bd8fd39529bbf698f7549edbc51faf
Reviewed-on: https://chromium-review.googlesource.com/1162750
Commit-Queue: Philip Rogers <pdr@chromium.org>
Reviewed-by: enne <enne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580725}
Former-commit-id: a9f679016c42686e2a688f9e95d7244aa693e45c